[package]
name = "ruby-sys"
version = "0.3.0"
authors = ["Steve Klabnik <steve@steveklabnik.com>",
           "Dmitry Gritsay <unseductable@gmail.com>"]
description = "Low level bindings to MRI, Matz's Ruby Interpreter."
homepage = "https://github.com/steveklabnik/ruby-sys"
documentation = "https://docs.rs/ruby-sys"
repository = "https://github.com/steveklabnik/ruby-sys"
keywords = ["ruby"]
license = "MIT"

build = "build.rs"
links = "ruby"

[dependencies]
libc = "0.2.0"

[features]
default = []
unstable = []
test = []
